--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,15 @@ p {
 p colored{
 	color: red;
 }
-#wrap, #wrap2 {
+#wrap {
 	width:530px;
 	margin:20px auto 0;
-	height:700px;
+	height:660px;
+}
+#wrap2 {
+	width:530px;
+	margin:20px auto 0;
+	height:660px;
 }
 #wrap h1 {
 	margin-bottom:20px;
@@ -39,7 +44,6 @@ p colored{
 	font-size:48px;
 	text-shadow:0 1px 0 #ede8d9;
 }
-
 #wrap2 h1 {
 	margin-bottom:20px;
 	text-align:center;
